app/src/styles/structure.less
@contrast-bg-color: #F8F8F8;

// Single-page setup
html, body {
  margin : 0;
  height : 100vh;
  width  : 100vw;
  .flex-display( flex );
  .flex-flow( column nowrap );
}

.app-content {
  .flex( 1 0 0px );
  .flex-display( flex );
  .flex-flow( row nowrap );
  height: inherit;
}

.app-view {
  .flex( 1 );
  .flex-display( flex );
  .flex-flow( column nowrap );

  & > main {
    .flex( 1 );
    .flex-display( flex );
    .flex-flow( column nowrap );
    overflow : auto;
    position : relative;

    &.full {
      background-color: @contrast-bg-color;
      position: relative;
      padding-right: @panel-body-padding;

      & + .app-footer {
        // TODO: This should be reevaluated later
        display: none;
      }

      &:after {
        content: "";
        display: block;
        position: absolute;
        top: 25px;
        right: 0;
        bottom: 25px;
        left: auto;
        width: 2px;
        #gradient > .vertical( fade( @freenas-gray, 10% )
                             , fade( darken( @freenas-gray, 10% ), 10% )
                             );
        border-right: 1px solid fade( white, 90% );
      }
    }
  }
}

.app-sidebar {
  .flex-display(flex);
  .flex( 0 0 50px );
  background-color: @contrast-bg-color;
  height     : inherit;
  overflow-x : hidden;
  overflow-y : auto;
}

.app-header {
  .flex( 0 0 @app-header-height );
}

.app-footer {
  .flex( 0 0 20px );
  background-color : @freenas-dark-gray;
}

